--- a/views/styles.css
+++ b/views/styles.css
@@ -105,3 +105,41 @@ main {
   font-size: 26px;
   line-height: 30px;
 }
+
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.overlay-content {
+  background-color: #171717;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+  color: #fff;
+}
+
+.overlay-content form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.overlay-content button {
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
