feat: implement video listing and detail retrieval functionality

--- a/views/index.html
+++ b/views/index.html
@@ -16,11 +16,7 @@
 <content>
 <aside>
   <h4><i class="bi bi-film"></i> VIDEOS</h4>
-  <section class="videos">
-    <a href="#"><div class="video-title">FLER ÜBER RAPPERNAMEN...</div><div class="video-subtitle">23.05.2024 &bull; HIPHOP.DE</div></a>
-    <a href="#"><div class="video-title">FLER ÜBER RAPPERNAMEN...</div><div class="video-subtitle">23.05.2024 &bull; HIPHOP.DE</div></a>
-    <a href="#"><div class="video-title">FLER ÜBER RAPPERNAMEN...</div><div class="video-subtitle">23.05.2024 &bull; HIPHOP.DE</div></a>
-  </section>
+  <section class="videos"></section>
   <h4><i class="bi bi-tags"></i> TAGS</h4>
   <section class="tags">
     <a href="#"><span class="tag-title">INTRO</span><span class="pill">3</span></a>
