--- a/views/styles.css
+++ b/views/styles.css
@@ -95,19 +95,35 @@ main {
   gap: 40px;
 }
 
-.video-player {
-  min-width: 500px
+.video-group {
+  margin-bottom: 40px;
+  padding-bottom: 30px;
+  border-bottom: 2px solid #007bff;
 }
 
+.video-player {
+  position: sticky;
+  top: 20px;
+  height: 0px;
+}
 
 .video-player video {
-  width: 500px
+  width: 500px;
+  position: absolute;
 }
 
-.video-transcript {
+.video-player .video-info {
+  width: 500px;
+  position: absolute;
+  top: 280px;
+  font-size: 24px;
+}
+
+.video-transcript .segments {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin-left: 520px;
 }
 
 .video-transcript .segment-container {
