feat: update frontend layout and styles for improved UI consistency and usability

--- a/views/index.html
+++ b/views/index.html
@@ -8,22 +8,38 @@
 <body>
 
 <header>
-  <button>SIDEBAR AUFKLAPPEN</button>
+  <button id="expand-button"><i class="bi bi-layout-sidebar"></i></button>
   <input type="text" placeholder="SEARCH">
-  <button id="upload-button">UPLOAD</button>
+  <button id="upload-button"><i class="bi bi-cloud-arrow-up-fill"></i></button>
 </header>
 
 <content>
-<aside>
-  <h4><i class="bi bi-film"></i> VIDEOS</h4>
-  <section class="videos"></section>
-  <h4><i class="bi bi-tags"></i> TAGS</h4>
-  <section class="tags">
-    <a href="#"><span class="tag-title">INTRO</span><span class="pill">3</span></a>
-    <a href="#"><span class="tag-title">BERLIN</span><span class="pill">22</span></a>
-    <a href="#"><span class="tag-title">ABOU-CHAKER</span><span class="pill">4</span></a>
-  </section>
-</aside>
+  <aside>
+    <h4><i class="bi bi-film"></i> VIDEOS</h4>
+    <section class="videos"></section>
+    <h4><i class="bi bi-tags"></i> TAGS</h4>
+    <section class="tags">
+      <a href="#"><span class="tag-title">INTRO</span><span class="pill">3</span></a>
+      <a href="#"><span class="tag-title">BERLIN</span><span class="pill">22</span></a>
+      <a href="#"><span class="tag-title">ABOU-CHAKER</span><span class="pill">4</span></a>
+    </section>
+  </aside>
+
+  <main>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+    aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
+  </main>
+
+</content>
+<!-- 
+<content>
+
 
 <main>
   <div class="video-transcript">
@@ -43,7 +59,10 @@
       <button type="submit">UPLOAD</button>
     </form>
   </div>
-</div>
+</div> -->
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
