feat: enhance video and tag loading UI with improved structure and styling

--- a/views/index.html
+++ b/views/index.html
@@ -15,16 +15,15 @@
 
 <content>
   <aside>
-    <h4><i class="bi bi-film"></i> VIDEOS</h4>
-    <section class="videos"></section>
-    <h4><i class="bi bi-tags"></i> TAGS</h4>
-    <section class="tags">
-      <a href="#"><span class="tag-title">INTRO</span><span class="pill">3</span></a>
-      <a href="#"><span class="tag-title">BERLIN</span><span class="pill">22</span></a>
-      <a href="#"><span class="tag-title">ABOU-CHAKER</span><span class="pill">4</span></a>
-    </section>
+    <div id="videoWrapper">
+      <h4><i class="bi bi-film"></i>&nbsp;&nbsp;VIDEOS</h4>
+      <section id="videoList"></section>
+    </div>
+    <div id="tagWrapper">
+      <h4><i class="bi bi-tags"></i>&nbsp;&nbsp;TAGS</h4>
+      <section id="tagList"></section>
+    </div>
   </aside>
-
   <main>
     aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
     aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>aaa<br/>
