--- a/views/styles.css
+++ b/views/styles.css
@@ -38,6 +38,7 @@ aside section { display: flex; flex-direction: column; }
 aside #videoList, aside #tagList { height: calc(100% - 43px); overflow: overlay; }
 aside #videoList a { display: flex; flex-direction: column; gap: 2px; color: #ffffff; text-decoration: none; padding: 10px 15px; cursor: pointer; }
 aside #tagList a { display: flex; gap: 2px; color: #ffffff; text-decoration: none; padding: 5px 15px; cursor: pointer; }
+aside a.active { background-color: #2f2f2f; }
 aside a:hover { background-color: #2f2f2f; }
 aside .video-title { font-weight: bold; }
 aside .video-subtitle { color: #858585; font-size: 14px; margin-bottom: 3px; }
@@ -45,15 +46,16 @@ aside .video-tags { display: flex; align-items: center; gap: 4px; line-height: 1
 aside .tag-title { font-weight: bold; flex: 1; text-transform: uppercase; color: #ffffff; }
 
 main section { display: flex; gap: 20px; }
-main video { width: 400px; }
-main .video-segment { display: flex; flex-direction: column; gap: 30px; }
+main .video-player { flex: 1; }
+main .video-player video { width: 100% }
+main .video-segment { flex: 3; display: flex; flex-direction: column; gap: 30px; }
 main .tags { flex: 1; display: flex; flex-direction: column; align-items: end; flex-wrap: wrap; gap: 10px; height: min-content; padding-top: 8px;}
 main .tags .pill { font-size: 14px !important; }
-main .text { flex: 6; }
+main .text { flex: 8; }
 main .text .highlight { color: #72bdff; }
 
 .pill { cursor: pointer; background-color: #007bff; font-size: 10px; padding: 2px 6px; border-radius: 10px; width: fit-content; }
-.pill.speaker { background-color: #ab8000; margin-bottom: 10px; }
+.pill.speaker { background-color: #ab8000; margin-bottom: 10px; font-weight: bold; }
 
 /* 
 content {
