feat: add training view functionality with sentence update and UI enhancements

--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,7 @@
 
 <header>
   <button id="expand-button"><i class="bi bi-layout-sidebar"></i></button>
+  <button id="view-toggle">TRAINING</button>
   <input type="text" placeholder="SEARCH">
   <button id="upload-button"><i class="bi bi-cloud-arrow-up-fill"></i></button>
 </header>
