--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,11 @@
 
 <header>
   <button id="expand-button"><i class="bi bi-layout-sidebar"></i></button>
-  <button id="view-toggle">TRAINING</button>
   <input type="text" placeholder="SEARCH">
-  <button id="upload-button"><i class="bi bi-cloud-arrow-up-fill"></i></button>
+  <div>
+    <button id="view-toggle"><i class="bi bi-tools"></i></button>
+    <button id="upload-button"><i class="bi bi-cloud-arrow-up-fill"></i></button>
+  </div>
 </header>
 
 <content>
