feat: enhance tag management with segment loading and UI improvements

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
   <button id="expand-button"><i class="bi bi-layout-sidebar"></i></button>
   <input type="text" placeholder="SEARCH">
   <div>
-    <button id="view-toggle"><i class="bi bi-tools"></i></button>
+    <button id="view-toggle" disabled><i class="bi bi-tools"></i></button>
     <button id="upload-button"><i class="bi bi-cloud-arrow-up-fill"></i></button>
   </div>
 </header>
