--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 
 <header>
   <button id="expand-button"><i class="bi bi-layout-sidebar"></i></button>
-  <input type="text" placeholder="SEARCH">
+  <input type="text" id="search-input" placeholder="SEARCH">
   <div>
     <button id="view-toggle" disabled><i class="bi bi-tools"></i></button>
     <button id="upload-button"><i class="bi bi-cloud-arrow-up-fill"></i></button>
