--- a/views/styles.css
+++ b/views/styles.css
@@ -54,8 +54,10 @@ main .video-player { flex: 1; }
 main .video-player video { width: 100% }
 main .video-info { display: flex; flex-direction: column; gap: 10px; position: sticky; top: 0px; text-transform: uppercase; }
 main .video-tags { display: flex; gap: 5px; }
+main .top-tags { position: fixed; display: flex; flex-wrap: wrap; gap: 6px; width: 300px; bottom: 20px; }
+main .top-tags .pill.top-tag { font-size: 16px; }
 main .video-segment { flex: 3; display: flex; flex-direction: column; gap: 30px; }
-main .tags { flex: 1; display: flex; flex-direction: column; align-items: end; flex-wrap: wrap; gap: 10px; height: min-content; padding-top: 8px;}
+main .tags { position: sticky; top: 0px; flex: 1; display: flex; flex-direction: column; align-items: end; flex-wrap: wrap; gap: 10px; height: min-content; padding-top: 8px; padding-bottom: 8px; }
 main .tags .pill { font-size: 12px; }
 main .tags .pill.add { background-color: #2f2f2f; }
 main .tags .speaker { font-size: 14px; background-color: #ab8000; margin-bottom: 10px; font-weight: bold; line-height: 16px; }
