--- a/views/styles.css
+++ b/views/styles.css
@@ -54,9 +54,10 @@ main .video-player { flex: 1; }
 main .video-player video { width: 100% }
 main .video-info { display: flex; flex-direction: column; gap: 10px; position: sticky; top: 0px; text-transform: uppercase; }
 main .video-tags { display: flex; gap: 5px; }
-main .top-tags { position: fixed; display: flex; flex-wrap: wrap; gap: 6px; width: 300px; bottom: 20px; }
-main .top-tags .pill.top-tag { font-size: 16px; }
-main .video-segment { flex: 3; display: flex; flex-direction: column; gap: 30px; }
+main .top-tags { display: flex; flex-wrap: wrap; gap: 6px; margin-top: 40px; }
+main .top-tags .pill.top-tag { font-size: 16px; background-color: #858585; }
+main .top-tags .pill.top-tag:hover { background-color: #007bff; }
+main .video-segment { flex: 2; display: flex; flex-direction: column; gap: 30px; }
 main .tags { position: sticky; top: 0px; flex: 1; display: flex; flex-direction: column; align-items: end; flex-wrap: wrap; gap: 10px; height: min-content; padding-top: 8px; padding-bottom: 8px; }
 main .tags .pill { font-size: 12px; }
 main .tags .pill .remove-tag { margin-right: -2px; }
